<resources>
    <string name="app_name">MovieZ</string>
    <string name="welcome">Bienvenue sur Moviez</string>
    <string name="pres">Grâce à MovieZ, tu vas pouvoir retrouver tous les films de ton choix en quelques clics !\nSi un film t\'intéresse, clique tout simplement dessus et tu auras accès à son affiche, son résumé, ainsi qu\'à sa bande-annonce!\n\nPour accéder à la liste de films, clique sur notre logo ! </string>
    <string name="title_activity_movie__items">Movie_Items</string>
    <string name="tab_text_1">Tous les films</string>
    <string name="tab_text_2">Rechercher un film</string>
    <string name="info_title">Titre</string>
    <string name="info_syn">Synopsis</string>
    <string name="info_date">Date</string>
    <string name="title_activity_movies">Movies</string>
    <string name="title_activity_movie_items">MovieItems</string>
    <string name="title_activity_movie_info">MovieInfo</string>
    <string name="title_detail">"Titre du film "</string>
    <string name="genre_detail">Genre</string>
    <string name="date_detail">Date</string>
    <string name="syn_detail">Synopsis</string>
    <string name="info_id">ID</string>

</resources>