<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".DetailActivity"
    android:layout_margin="10dp" >
    
    <ImageView
        android:id="@+id/poster_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        />

    <TextView
        android:id="@+id/title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_detail"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>
    <TextView
        android:id="@+id/id_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_id"
        android:textSize="10sp"
        android:textColor="@color/colorBlack"/>


    <TextView
        android:id="@+id/genre_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_detail"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"
        />

    <TextView
        android:layout_margin="10dp"
        android:id="@+id/date_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_detail"
        android:textColor="@color/colorBlack"/>

    <TextView
        android:id="@+id/syn_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/syn_detail"
        android:textColor="@color/colorBlack"/>

</LinearLayout>